--- a/index.css
+++ b/index.css
@@ -3,3 +3,8 @@
 body {
     font-family: 'Roboto', Helvetica, Arial, sans-serif;
 }
+
+ul {
+    text-align: center;
+    list-style-position: inside;
+}
