--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Oswald|Roboto');
 
 body {
     font-family: 'Roboto', Helvetica, Arial, sans-serif;
@@ -7,4 +7,12 @@ body {
 ul {
     text-align: center;
     list-style-position: inside;
+}
+
+.movieName{
+    font-style:italic
+}
+
+.movieYear{
+    font-family: 'Oswald', sans-serif;
 }
