--- a/index.css
+++ b/index.css
@@ -18,3 +18,10 @@ ul {
 .movieYear {
     font-family: 'Oswald', sans-serif;
 }
+
+body {
+    background-image: url("assets/background.jpg");
+    width: 50%;
+    display: block;
+    margin: -2vw auto 0;
+}
