Remove unused font import

--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Markazi+Text|Oswald|Roboto|Galada');
+@import url('https://fonts.googleapis.com/css?family=Markazi+Text|Oswald|Roboto');
 
 body {
     font-family: 'Roboto', Helvetica, Arial, sans-serif;
