--- a/index.css
+++ b/index.css
@@ -35,7 +35,7 @@ ul {
 }
 
 body {
-    background-image: url("assets/background2.jpg");
+    background-image: url("assets/background.jpg");
     background-repeat: no-repeat;
     background-size: auto;
     width: 50%;
@@ -43,6 +43,7 @@ body {
     margin: -2vw auto 0;
 }
 
-#favorite {
-    color: yellow;
+.favorite {
+    background-color: gold
+    color: white;
 }
